--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^13.4.0",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
